<resources>
    <string name="app_name">Fruitopia Dash</string>
    <string name="start_game">Start Game</string>
    <string name="your_points">Your Points : </string>
    <string name="high_score">High Score : </string>
    <string name="play_button">Play Button</string>
    <string name="logo">Logo</string>
    <string name="close_button">Close Button</string>
    <string name="restart_button">Restart button</string>
</resources>