<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/close"
            android:contentDescription="@string/close_button"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:onClick="exit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/trophy"
            android:visibility="invisible" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_points"
                    android:textColor="@color/white"
                    android:fontFamily="@font/digitalt"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/digitalt"
                    android:text="50"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="45sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:text="@string/high_score"
                    android:textColor="@color/white"
                    android:fontFamily="@font/digitalt"
                    android:textSize="45sp" />

                <TextView
                    android:id="@+id/tvHighScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/digitalt"
                    android:text="100"
                    android:textColor="@android:color/holo_orange_light"
                    android:textSize="45sp" />
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/restartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/restart"
            android:contentDescription="@string/restart_button"
            android:layout_marginTop="10dp"
            android:onClick="restart"/>
    </LinearLayout>

</LinearLayout>